# sim-ready-robot

./: README.md
docker/: Dockerfile  docker-compose.yml
src/sim_robot_description/: CMakeLists.txt  package.xml
src/sim_robot_description/launch/: display.launch.py
src/sim_robot_description/urdf/: sim_robot.urdf.xacro
src/sim_robot_gazebo/: CMakeLists.txt  package.xml
src/sim_robot_gazebo/launch/: gazebo.launch.py
src/sim_robot_gazebo/worlds/: sim_world.world
src/sim_robot_nav2/: CMakeLists.txt  package.xml
src/sim_robot_nav2/config/: nav2_params.yaml
src/sim_robot_nav2/launch/: nav2.launch.py
