<?xml version="1.0"?>
<package format="3">
  <name>sim_robot_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo launch and worlds for sim_ready_robot</description>
  <maintainer email="srihaas.x@gmail.com">srihaas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>sim_robot_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
