<?xml version="1.0"?>
<package format="3">
  <name>sim_robot_nav2</name>
  <version>0.1.0</version>
  <description>Nav2 config and launch for sim_ready_robot</description>
  <maintainer email="srihaas.x@gmail.com">srihaas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>sim_robot_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
